# hashlet

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
doc/: .gitignore  Makefile.am  hashlet.texi  hashlet_bbb.txt  hashlet_sch.txt
hardware/: hashlet_bbb.brd  hashlet_bbb.sch  hashlet_pi.brd  hashlet_pi.sch
src/: command.c  command.h  command_adaptation.c  crc.c  crc.h  defs.h  hashlet.h  i2c.c  i2c.h  log.c  log.h  main.c  test.c  util.c  util.h
src/cli/: cli_commands.c  cli_commands.h  hash.c  hash.h  main.c  sha256.c  sha256.h
src/driver/: command.c  command.h  command_adaptation.c  command_adaptation.h  config_zone.c  config_zone.h  crc.c  crc.h  defs.h  hashlet.h  i2c.c  i2c.h  log.c  log.h  personalize.c  personalize.h  util.c  util.h
src/parser/: hashlet_bison.y  hashlet_flex.l  hashlet_parser.c  hashlet_parser.h
src/tests/: factory.sh  random.sh  test.c  test.h  test_cli.sh
